
- Bots agora podem ter contas na Menhera! Para um bot ter uma conta, a Lux precisa fazê-lo manualmente, então caso queira um bot, só pedir pra ela. Os bots só podem ser mamados e receber presentes.

### Changed

- As permissões necessárias para a Menhera funcionar foram revistas! Agora a Menhera só precisa ter permissão de MANAGE_WEBHOOKS (Somente para o comando /xandao) para funcionar!
- Os comandos de imagem agora ignoram nomes com caracteres tortos. Então caso tu queria mostrar teu nome normal, seja uma pessoa não doente e use um username padrao, seu estranho.

## [3.5.0] 2021-11-15

### Added

- Criado um loop de evento que é executado sempre à meia noite para funções internas
- Usuários não podem usar mais de um comando de economia ao mesmo tempo!
- Usuários no meio de comandos de economia não podem mais ser escolhidos em outros comandos
- Sistema de punição de usuários inativos começou!

### Fix

- Resolvido problema ao ver o banimento de um usuário
- Resolvido problema do blackjack de mandar imagem quando não se responde

## [3.4.3] 2021-11-09

### Added

- Novo comando de imagem `/vasco`

### Fix

- Resolvido o comando inventário não funcionar caso o usuário tenha o item `Necare Hêmítheos`
- Resolvido problema do trisal quando nao encontrava usuarios
- Resolvido erro ao usuários caçarem pela primeira vez

## [3.4.2] 2021-11-09

### Fix

- Problema no comando inventário
- Badges de usuário casado mostrando mesmo se o usuário não estiver casado

## [3.4.1] 2021-11-09

### Fix

- Resolvido problema que o sistema de votos não salvava os dados

## [3.4.0] 2021-11-08

### Added

- NOVO COMANDO! `/inventario`
- NOVO SISTEMA! **ITEMS MÁGICOS** - Com itens mágicos, usuários podem aumentar suas chances de caça, trazendo alguns tipos de caças para sempre obterem sucesso